--- a/Style.css
+++ b/Style.css
@@ -54,7 +54,7 @@ ul li {
 }
 
 footer {
-	background-color: #333;
+	background-color: #7CFC00;
 	color: #fff;
 	padding: 10px;
 	text-align: center;
