--- a/Style.css
+++ b/Style.css
@@ -59,3 +59,12 @@ footer {
 	padding: 10px;
 	text-align: center;
 }
+.container-img {
+  display: flex;
+}
+
+.container-img img {
+  width: 33.33%;
+  height: auto;
+}
+
