--- a/Style.css
+++ b/Style.css
@@ -1,70 +1,38 @@
 body {
-	font-family: Arial, sans-serif;
-	margin: 0;
-	padding: 0;
+	background-color: #b0c4de;
 }
 
-header {
-	background-color:#C0C0C0;
-	color: #fff;
-	padding: 10px;
+.logo {
+	display: block;
+	margin: 0 auto;
+	text-align: center;
+	width: 40%;
+	max-width: 300px;
 }
 
 nav ul {
 	margin: 0;
 	padding: 0;
-	list-style-type: none;
+	list-style: none;
 }
 
 nav li {
 	display: inline-block;
-	margin-right: 10px;
+	margin: 0 10px;
 }
 
-nav a {
+.footer-nav {
+	padding: 10px;
+	background-color: #333;
 	color: #fff;
-	text-decoration: none;
 }
 
-nav a:hover {
-	color: #ccc;
-}
-
-main {
-	margin: 20px;
-}
-
-section {
-	margin-bottom: 40px;
-}
-
-h2 {
-	font-size: 1.5em;
-	margin-bottom: 10px;
-}
-
-ul {
+.footer-nav ul {
 	margin: 0;
 	padding: 0;
-	list-style-type: none;
+	list-style: none;
 }
 
-ul li {
-	margin-bottom: 10px;
+.footer-nav li {
+	margin: 5px 0;
 }
-
-footer {
-	background-color: #000;
-	color: #fff;
-	padding: 10px;
-	text-align: center;
-}
-.container-img {
-  display: flex;
-}
-
-.container-img img {
-  width: 33.33%;
-  height: auto;
-}
-
