--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   text-align: left;
   margin-top: 70px;
   font-size: 60px;
-  color:#2a2c47;
+  color:white;
 }
 
 
@@ -171,4 +171,3 @@
 
   .logo h1 {
    
-
