--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
   color: #fff;
   height: 70px;
   padding: 0 5px;
+  
 }
 
 .menu ul {
@@ -35,6 +36,7 @@
   flex-wrap: wrap;
   justify-content: flex-end;
   align-items: center;
+  
 }
 
 .menu li {
@@ -53,7 +55,7 @@
 /* Stili per il contenuto */
 .content {
   padding: 100px;
-  background-color: #344d83;
+  background-color: rgba(52, 77, 131, 0.7); /* Opacità impostata a 0.5 (50%) */
 }
 
 .content h1 {
@@ -123,7 +125,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color:  #2a2c47;
+ background-color: rgba(52, 77, 131, 0.8); /* Opacità impostata a 0.5 (50%) */
 }
 
 .box h2 {
