--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@
 
 
 
-/* Stili per il menu */
 .menu {
   display: flex;
   justify-content: space-between;
@@ -50,17 +49,11 @@
 }
 
 .menu-list {
-  display: none;
-  flex-direction: column;
-  position: absolute;
-  top: 70px; /* Imposta un valore che desideri per spostare la tendina più in alto */
-  right: -5px; /* Imposta un valore che desideri per posizionare la tendina di fianco alla striscia blu */
-  background-color: #2a2c47;
-  color: #fff;
-  padding: 10px;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
-
-
 
 .menu-list li {
   margin: 0 10px;
@@ -73,6 +66,30 @@
   font-weight: bold;
   text-transform: uppercase;
 }
+
+@media (max-width: 768px) {
+  .menu-icon {
+    display: flex;
+    order: 2;
+    margin-right: 10px;
+  }
+
+  .menu-toggle:checked ~ .menu-list {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 70px;
+    right: 5px;
+    background-color: #2a2c47;
+    color: #fff;
+    padding: 10px;
+  }
+
+  .menu-list li {
+    margin: 10px 0;
+  }
+}
+
 
 /* Stili per la responsività */
 @media (max-width: 768px) {
