--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
- /* Stili per il logo */
+
+ 
+    /* Stili per il logo */
     .container {
       text-align: center;
     }
@@ -606,6 +608,78 @@
     font-size: 24px;
     margin-top: 10px;
   }
+
+body {
+  background-image: url("https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/18821f3d-c7c4-4939-953f-4e42a0a49858.jpg?raw=true");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto Flex', sans-serif;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 20px;
+}
+
+#lavori {
+  color: #f5fffa;
+  text-align: center;
+}
+
+.box {
+  margin: 20px;
+  text-align: center;
+}
+
+.slideshow-container {
+  position: relative;
+  max-width: 90%;
+}
+
+.mySlides {
+  display: none;
+}
+
+.slideshow-image {
+  width: 100%;
+  height: auto;
+}
+
+
+
+  .scroll-to-top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #212238 rgba(0, 0, 255, 0.5);
+    color: black;
+    cursor: pointer;
+    opacity: 0.8;
+  }
+
+  .scroll-to-top:hover {
+    opacity: 1;
+  }
+
+  .arrow-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+  }
+
 
 
 
