--- a/style.css
+++ b/style.css
@@ -451,7 +451,7 @@
 
 
 /* cOPYRIGHT*/
-     .image-container {
+    .image-container {
       height: 100%;
       display: flex;
       justify-content: center;
@@ -464,14 +464,8 @@
       .image-container img {
          max-width: 100%;
          height: auto;
+         width: 90%; /* Adjust the width percentage as desired */
       }
-   }
-
-   .image-container img {
-      width: 25%;
-      height: auto;
-      max-width: 100%;
-      max-height: 100%;
    }
 
    .contact-container {
