--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@
       font-size: 60px;
       color: white;
     }
+
+@media only screen and (max-width: 480px) {
+  h2 {
+    font-size: 14px;
+    padding: 5px;
+  }
+}
     
     /* Stili per la responsività */
     @media (max-width: 768px) {
