--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 
+  
     /* Stili per il logo */
     .container {
       text-align: center;
@@ -15,14 +16,14 @@
       font-size: 60px;
       color: white;
     }
+    
 
 @media only screen and (max-width: 480px) {
   h2 {
     font-size: 30px;
-    padding: 12px;
+    padding: 5px;
   }
 }
-    
     /* Stili per la responsività */
     @media (max-width: 768px) {
       /* Stili diversi per dispositivi con larghezza massima di 768px */
@@ -175,27 +176,17 @@
 
 @media (max-width: 600px) {
   .content {
-    padding: 0 10px;
+    padding: 0 30px;
   }
   .content h1 {
     font-size: 24px !important;
     max-width: none !important;
   }
- 
-  /* Stile di base per i paragrafi */
-  p {
-    font-size: 16px;
-    line-height: 1.5;
+  .content p {
+    font-size: 12px !important;
+    max-width: none !important;
   }
-
-  /* Stili specifici per dispositivi mobili */
-  @media (max-width: 767px) {
-    p {
-      font-size: 14px;
-      max-width: 100%;
-    }
-  }
-
+}
 
 
 
