--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-  
     /* Stili per il logo */
     .container {
       text-align: center;
@@ -175,25 +174,19 @@
 
 
 .content {
-  padding: 0 30px;
-}
-
-@media (max-width: 600px) {
-  .content {
-    padding: 0;
+    padding: 0 30px;
   }
-  .content h1,
-  .content p {
-    max-width: none;
-    word-wrap: break-word;
-    font-size: 10px;
-    white-space: normal;
-    width: 100%;
-    margin: 5px 0; /* Riduci i margini superiori e inferiori a 5px */
+
+  @media (max-width: 600px) {
+    .content {
+      padding: 0; /* Rimuovi il padding laterale per consentire all'elemento di espandersi in larghezza */
+    }
+    .content h1,
+    .content p {
+      max-width: none; /* Rimuovi la larghezza massima per consentire all'elemento di espandersi in larghezza */
+      word-wrap: break-word; /* Permetti la divisione delle parole lunghe su più righe se necessario */
+    }
   }
-}
-
-
 
 
   /* Stili personalizzati per il grid delle immagini */
@@ -694,7 +687,6 @@ body {
     justify-content: center;
     font-size: 24px;
   }
-
 
  
       
