--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-    /* Stili per il logo */
+   /* Stili per il logo */
     .container {
       text-align: center;
     }
@@ -173,20 +173,20 @@
 }
 
 
-.content {
+@media (max-width: 600px) {
+  .content {
     padding: 0 30px;
   }
-
-  @media (max-width: 600px) {
-    .content {
-      padding: 0; /* Rimuovi il padding laterale per consentire all'elemento di espandersi in larghezza */
-    }
-    .content h1,
-    .content p {
-      max-width: none; /* Rimuovi la larghezza massima per consentire all'elemento di espandersi in larghezza */
-      word-wrap: break-word; /* Permetti la divisione delle parole lunghe su più righe se necessario */
-    }
+  .content h1 {
+    font-size: 24px !important;
+    max-width: none !important;
   }
+  .content p {
+    font-size: 12px !important;
+    max-width: none !important;
+  }
+}
+
 
 
   /* Stili personalizzati per il grid delle immagini */
@@ -688,7 +688,7 @@ body {
     font-size: 24px;
   }
 
- 
+
       
 
 
