--- a/style.css
+++ b/style.css
@@ -181,11 +181,12 @@
   .content p {
     max-width: none !important;
     word-wrap: break-word; /* Permetti la divisione delle parole lunghe su più righe se necessario */
+    white-space: nowrap; /* Impedisce il wrap del testo su più righe */
+    overflow: hidden; /* Nasconde il testo che supera la larghezza disponibile */
+    text-overflow: ellipsis; /* Aggiunge puntini di sospensione per indicare il testo troncato */
     margin: 0; /* Rimuovi i margini */
   }
 }
-
-
 
 
   /* Stili personalizzati per il grid delle immagini */
