--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@
 
 
 @media (max-width: 600px) {
-  .content {
+  .content p {
     padding: 0 5px; /* Riduci il padding laterale */
     overflow-x: auto; /* Aggiungi la barra di scorrimento orizzontale se il testo supera la larghezza disponibile */
   }
