--- a/style.css
+++ b/style.css
@@ -186,6 +186,14 @@
   }
 }
 
+/* Visione, Missione e Valori */
+.content p {
+  display: centre;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+
 
 
   /* Stili personalizzati per il grid delle immagini */
