--- a/style.css
+++ b/style.css
@@ -1,27 +1,3 @@
-
-
-/* Stili per il logo */
-.container {
-  text-align: center;
-}
-
-.logo {
-  display: block;
-  margin: 2 auto;
-}
-
-.title {
-  text-align: left;
-  margin-top: 70px;
-  font-size: 60px;
-  color:white;
-}
-@media (max-width: 768px) {
-  .title {
-    display: none;
-  }
-}
-
 /* Stili per il logo */
     .container {
       text-align: center;
@@ -114,7 +90,21 @@
   }
 }  
 
-    /* Stili per la responsività */
+
+/* sfondo*/
+body {
+  background-image: url("https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/camion%20mod.jpg?raw=true");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  color: white;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto Flex', sans-serif;
+}
+
+
+    /* Stili per la responsività barra menù*/
     @media (max-width: 768px) {
       /* Stili diversi per dispositivi con larghezza massima di 768px */
       .center {
@@ -190,7 +180,7 @@
 
 
 
-  /* Stili personalizzati per il grid delle immagini */
+  /* Stili personalizzati per il grid delle immagini referenze */
   .my-image-grid {
     display: flex;
     flex-wrap: wrap;
@@ -207,7 +197,7 @@
     height: auto;
   }
 
-  /* Stili per modalità mobile */
+  /* Stili per modalità mobile referenze */
   @media (max-width: 768px) {
     .my-image-grid {
       flex-direction: column; /* Le immagini vengono disposte verticalmente */
@@ -218,24 +208,7 @@
     }
   }
 
-
-
-
-
-
-
-
-
-
-
-
-  
-
-
-
-
-
-/* Stili per il contenuto */
+/* Stili per il contenuto quadrante sotto scritta */
 .content {
   padding: 100px;
   background-color: rgba(52, 77, 131, 0.7); /* Opacità impostata a 0.5 (50%) */
@@ -253,7 +226,7 @@
 }
 
 
-/* Foto scorrevoli */
+/* Foto scorrevoli  centrate*/
 .slideshow-container {
   position: relative;
   max-width: 40%;
@@ -268,31 +241,11 @@
   width: 100%;
   height: auto;
 }
-
-/* Servizi */
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
-  max-width: 100%;
+.slideshow-container {
+  position: relative;
+  max-width: 90%;
 }
 
-.item {
-  flex: 0 0 calc(25% - 1px);
-  margin: 100px;
-  text-align: center;
-}
-
-.item img {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.item h3 {
-  margin-top: 10px;
-}
 
 /* Visione, Missione e Valori */
 .container {
@@ -341,7 +294,7 @@
 }
 
 
-    /* CSS per rendere i quadranti responsive */
+    /* CSS per rendere i quadranti responsive servizi */
     .quadrant {
       display: flex;
       flex-wrap: wrap;
@@ -390,11 +343,7 @@
     text-align: center;
   }
 
-  /* Stile per la scritta sopra la casella di contatto */
-  .contact-form h2 {
-    margin-top: 0;
-  }
-
+ 
   /* Stile per i campi della form */
   .contact-form input[type="text"],
   .contact-form input[type="email"],
@@ -437,10 +386,7 @@
     text-align: center;
   }
 
-  /* Stile per il titolo contatti */
-  .contact-info h3 {
-    margin-top: 0;
-  }
+  
 
   /* Stile per i campi contatti */
   .contact-info p {
@@ -457,7 +403,7 @@
 
 
 
-/* cOPYRIGHT*/
+/* IMMAGINE MAPPA*/
       .image-container {
       height: 100%;
       display: flex;
@@ -466,7 +412,7 @@
       margin-bottom: 30px;
    }
 
-   /* Media query for mobile devices */
+   /* Media query for mobile devices mappa*/
    @media (max-width: 767px) {
       .image-container img {
          max-width: 100%;
@@ -578,6 +524,7 @@
       }
    }
 
+/* COPYRIGHT */
    .copyright {
       background-color: #2a2c47;
       color: #fff;
@@ -589,7 +536,7 @@
    }
 
 
-
+/* tasto torna su */
  
   .scroll-to-top {
     display: none;
@@ -618,16 +565,8 @@
     margin-top: 10px;
   }
 
-body {
-  background-image: url("https://github.com/Auro1201/Esercizio-Di-Web-Design/blob/main/ansi/camion%20mod.jpg?raw=true");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-  color: white;
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto Flex', sans-serif;
-}
+
+
 
 .container {
   display: flex;
@@ -637,54 +576,5 @@ body {
   padding: 20px;
 }
 
-#lavori {
-  color: #f5fffa;
-  text-align: center;
-}
-
-.box {
-  margin: 20px;
-  text-align: center;
-}
-
-.slideshow-container {
-  position: relative;
-  max-width: 90%;
-}
-
-.mySlides {
-  display: none;
-}
-
-.slideshow-image {
-  width: 100%;
-  height: auto;
-}
 
 
-
-  .scroll-to-top {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #212238 rgba(0, 0, 255, 0.5);
-    color: black;
-    cursor: pointer;
-    opacity: 0.8;
-  }
-
-  .scroll-to-top:hover {
-    opacity: 1;
-  }
-
-  .arrow-icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-  }
