--- a/style.css
+++ b/style.css
@@ -1,27 +1,26 @@
-/* Stili per il logo */
-    .container {
-      text-align: center;
-    }
-    
-    .logo {
-      display: block;
-      margin: 2 auto;
-    }
-    
-    .title {
-      text-align: left;
-      margin-top: 70px;
-      font-size: 60px;
-      color: white;
-    }
-    
+.container {
+  text-align: center;
+}
 
-@media only screen and (max-width: 480px) {
-  h2 {
+.logo {
+  display: block;
+  margin: 0 auto;
+}
+
+.title {
+  text-align: centre;
+  margin-top: 70px;
+  font-size: 60px;
+  color: white;
+}
+
+@media only screen and (max-width: 768px) {
+  .title {
     font-size: 30px;
     padding: 5px;
   }
 }
+
 .menu {
   display: flex;
   justify-content: space-between;
@@ -88,8 +87,35 @@
   .menu-list li {
     margin: 10px 0;
   }
-}  
+}
 
+.visione,
+.missione,
+.valori {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+.box {
+  background-color: lightgray;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: rgba(52, 77, 131, 0.8);
+}
+
+.box h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.box p {
+  font-size: 18px;
+}
 
 /* sfondo*/
 body {
@@ -164,7 +190,7 @@ body {
 }
 
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
   .content {
     padding: 0 30px;
   }
@@ -247,33 +273,7 @@ body {
 }
 
 
-/* Visione, Missione e Valori */
-.container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 20px;
-}
 
-.box {
-  background-color: lightgray;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
- background-color: rgba(52, 77, 131, 0.8); /* Opacità impostata a 0.5 (50%) */
-}
-
-.box h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
-  
-}
-
-.box p {
-  font-size: 18px;
-}
 
 /* Stili per il tasto */
 .center {
@@ -413,7 +413,7 @@ body {
    }
 
    /* Media query for mobile devices mappa*/
-   @media (max-width: 767px) {
+   @media (max-width: 768px) {
       .image-container img {
          max-width: 100%;
          height: auto;
@@ -503,7 +503,7 @@ body {
       cursor: pointer;
    }
 
-   @media screen and (max-width: 600px) {
+   @media screen and (max-width: 768px) {
       .contact-container .container {
          flex-direction: column;
          padding: 20px;
@@ -564,17 +564,6 @@ body {
     font-size: 24px;
     margin-top: 10px;
   }
-
-
-
-
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 20px;
-}
 
 
 
