--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
+#dove {
+  color: #f5fffa;
+  text-align: center;
+}
+#servizi {
+  color: #f5fffa;
+  text-align: center;
+}
+#referenze {
+  color: #f5fffa;
+  text-align: center;
+}
+
+h2 {
+  text-align: center;
+  color: white;
+}
+p {
+        color: white;
+    }
 .container {
   text-align: center;
 }
@@ -564,6 +584,7 @@ body {
     font-size: 24px;
     margin-top: 10px;
   }
+
 
 
 
